# python-project-lvl2

./: Makefile  README.md  pyproject.toml
gendiff/: __init__.py
gendiff/scripts/: gendiff.py
gendiff/tools/: generate_diff.py
tests/: test_generate_diff.py
tests/fixtures/: result_json
